--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,4 +23,6 @@
     <!-- External CSS -->
     <link rel="stylesheet" href="css/main.css">
 
+    <link href="https://fonts.googleapis.com/css?family=Oswald|PT+Sans" rel="stylesheet">
+
   </head>
