--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html lang="en-us">
-  <head>
+<head>
   <title>
     {% if page.title == "Home" %}
       {{ site.title }} &middot;
@@ -23,6 +21,6 @@
     <!-- External CSS -->
     <link rel="stylesheet" href="css/main.css">
 
-    <link href="https://fonts.googleapis.com/css?family=Oswald|PT+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:400,600|PT+Serif" rel="stylesheet">
 
-  </head>
+</head>
