Completed footer. Closes #5

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,5 @@
-  </body>
-</html>
+<footer class="bg-ashblue pt2">
+  <div class = "bt b--ashdarkgrey">
+    <img class="mw4-5" src="{{ site.baseurl }}/images/LOGO-HORIZ-RGB-white.png" alt="Ashbright logo">
+  </div>
+</footer>
