--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
   </title>
 
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
   {% if page.excerpt %}
