--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -3,4 +3,6 @@ $root-line-height: 1.5;
 $body-color: #515151;
 $body-bg: #fff;
 $link-color: #B9CCE9;
-$border-color: #e5e5e5;
+$border-color: #C6C8CA;
+
+
