Added hero and nav.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="bg-ashblue pt2">
   <div class = "bt b--ashdarkgrey">
-    <img class="mw4-5" src="{{ site.baseurl }}/images/LOGO-HORIZ-RGB-white.png" alt="Ashbright logo">
+    <img class="mw4-5" src="{{ site.baseurl }}/images/LOGO-HORIZ-RGB-white.png" alt="Ashbright">
   </div>
 </footer>
