Added buttons on home and changed hero call to action button.

--- a/_scss/_tachyons-extend.scss
+++ b/_scss/_tachyons-extend.scss
@@ -35,9 +35,11 @@ h4,.f4 { font-size: 1rem; }
 //_skins
 .ashblue { color: $link-color; }
 .ashgrey { color: $border-color; }
+.ashdarkgrey { color: $body-color; }
 
 .bg-ashblue { background-color: $link-color; }
 .bg-ashgrey { background-color: $border-color; }
+.bg-ashdarkgrey { background-color: $body-color; }
 
 //skins-pseudo
 
