--- a/_layouts/situations.html
+++ b/_layouts/situations.html
@@ -1,25 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
+---
+layout: default
+---
 
-  {% include head.html %}
+{% include header.html %}
 
-    <body>
-
-      <main>
-        {{ content }}
-      </main>
-
-  {% include footer.html %}
-
-    {% if site.analytics_id %}
-     <script>
-       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-       ga('create', '{{ site.analytics_id }}', 'auto');
-       ga('send', 'pageview');
-     </script>
-    {% endif %}
-  </body>
-</html>
+  <div class="vh-100 dt w-100 tc bg-dark-gray white cover" style="background:url(http://mrmrs.github.io/photos/u/009.jpg) no-repeat center;">
+    <div class="dtc v-mid">
+      <h1 class="f1 f1-l fw2 white-90 mb0 lh-title ttu">{{ page.title }}</h1>
+      <p class="fw1 f3 white-80 mt1 mb3">
+          {{ page.excerpt }}
+        </p>
+      </blockquote>
+    </div>
+  </div>
+  <div class="center measure-wide f5 pv5 lh-copy ph2">
+    <h2 class="f1 lh-title">{{ page.header }}</h2>
+    {{ content }}
+  </div>
