Updates to base url

--- a/_layouts/situations.html
+++ b/_layouts/situations.html
@@ -14,6 +14,6 @@ layout: default
     </div>
   </div>
   <div class="center measure-wide f5 pv5 lh-copy ph2">
-    <h2 class="f1 lh-title">{{ page.header }}</h2>
+    <h2 class="f1 ashblue ttu">{{ page.header }}</h2>
     {{ content }}
   </div>
