--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,12 @@
 <nav class="db dt-l w-100 border-box pa3 ph5-l">
-  <a class="db dtc-l v-mid mid-gray link dim w-100 w-25-l tc tl-l mb2 mb0-l" href="{{ site.baseurl }}" title="Home">
-    <img src="/images/LOGO-HORIZ-RGB.png" class="dib" alt="Ashbright">
+  <a class="db dtc-l v-mid mid-gray link dim w-100 w-25-l tc tl-l mb2 mb0-l" href="{{ site.baseurl }}/" title="Home">
+    <img src="{{ site.baseurl }}/images/LOGO-HORIZ-RGB.png" class="dib" alt="Ashbright">
   </a>
 
   <div class="db dtc-l v-btm w-100 w-75-l tc tr-l">
-    <a class="ash-sans link hover-ashblue dim no-underline ashblue f6 f5-l dib mr3 mr4-l ttu" href="/" title="Home">Home</a>
-    <a class="ash-sans hover-ashblue dim no-underline ashblue f6 f5-l dib mr3 mr4-l ttu"  href="/#about" title="About">About</a>
-    <a class="ash-sans hover-ashblue dim no-underline ashblue f6 f5-l dib mr3 mr4-l ttu"  href="/#situations" title="Situations">Situations</a>
-    <a class="ash-sans hover-ashblue dim no-underline ashblue f6 f5-l dib mr3 mr4-l ttu" href="/#contact" title="Contact">Contact</a>
+    <a class="ash-sans link hover-ashblue dim no-underline ashblue f6 f5-l dib mr3 mr4-l ttu" href="{{ site.baseurl }}/" title="Home">Home</a>
+    <a class="ash-sans hover-ashblue dim no-underline ashblue f6 f5-l dib mr3 mr4-l ttu"  href="{{ site.baseurl }}/#about" title="About">About</a>
+    <a class="ash-sans hover-ashblue dim no-underline ashblue f6 f5-l dib mr3 mr4-l ttu"  href="{{ site.baseurl }}/#situations" title="Situations">Situations</a>
+    <a class="ash-sans hover-ashblue dim no-underline ashblue f6 f5-l dib mr3 mr4-l ttu" href="{{ site.baseurl }}/#contact" title="Contact">Contact</a>
 </div>
 </nav>
