--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,7 +20,7 @@
   {% endif %}
 
     <!-- External CSS -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
 
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,600|PT+Serif" rel="stylesheet">
 
