--- a/_scss/_tachyons-extend.scss
+++ b/_scss/_tachyons-extend.scss
@@ -21,15 +21,41 @@ html {
   line-height: $root-line-height;
 }
 
+.f-head { font-size: 2.5rem; }
+.f-sub { font-size: 2rem; }
+
 h1,.f1 { font-size: 2rem; }
 h2,.f2 { font-size: 1.5rem; }
 h3,.f3 { font-size: 1.25rem; }
 h4,.f4 { font-size: 1rem; }
 
-@media #{$breakpoint-not-small} {
+@media #{$breakpoint-not-small}{
   .f-head-ns { font-size: 3rem; }
   .f-sub-ns { font-size: 2rem; }
+  .f1-ns { font-size: 2rem; }
+  .f2-ns { font-size: 1.5rem; }
+  .f3-ns { font-size: 1.25rem; }
+  .f4-ns { font-size: 1rem; }
 }
+
+@media #{$breakpoint-medium} {
+  .f-head-m { font-size: 3rem; }
+  .f-sub-m { font-size: 2rem; }
+  .f1-m { font-size: 2rem; }
+  .f2-m { font-size: 1.5rem; }
+  .f3-m { font-size: 1.25rem; }
+  .f4-m { font-size: 1rem; }
+}
+
+@media #{$breakpoint-large} {
+  .f-head-l { font-size: 3rem; }
+  .f-sub-l { font-size: 2rem; }
+  .f1-l { font-size: 2rem; }
+  .f2-l { font-size: 1.5rem; }
+  .f3-l { font-size: 1.25rem; }
+  .f4-l { font-size: 1rem; }
+}
+
 
 //_border-colors
 .b--ashblue { border-color: $link-color; }
