Change text and site titles.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="bg-ashblue pt2">
-  <div class = "bt b--ashdarkgrey">
+  <div class = "bt b--ashdarkgrey tc tl-l">
     <img class="mw4-5" src="{{ site.baseurl }}/images/LOGO-HORIZ-RGB-white.png" alt="Ashbright">
   </div>
 </footer>
