--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,10 +1,10 @@
 <head>
   <title>
     {% if page.title == "Home" %}
-      {{ site.title }} &middot;
+      {{ site.title }} &#8211;
       {{ site.tagline }}
     {% else %}
-      {{ page.title }} &middot;
+      {{ page.title }} &#8211;
       {{ site.title }}
     {% endif %}
   </title>
