--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,15 +9,21 @@
     {% endif %}
   </title>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
   {% if page.excerpt %}
     <meta name="description" content="{{ page.excerpt | strip_html | truncatewords: 20 }}" />
   {% else %}
     <meta name="description" content="{{ site.tagline }}" />
   {% endif %}
+
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/favicon-16x16.png">
+  <link rel="manifest" href="{{ site.baseurl }}/manifest.json">
+  <meta name="theme-color" content="#ffffff">
 
     <!-- External CSS -->
     <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
