--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,12 @@
-<footer class="bg-ashblue pt2">
-  <div class = "bt b--ashdarkgrey tc tl-l">
-    <img class="mw4-5" src="{{ site.baseurl }}/images/LOGO-HORIZ-RGB-white.png" alt="Ashbright">
+<footer class="bg-ashblue pt2 mt4 pb5-l">
+  <div class = "bt b--ashdarkgrey tc tl-l pt4-l">
+  <section id="contact" class="mw6 mw7-ns center pt4 tc fr-l pr5-l">
+    <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb4 mr3-ns dib white bg-black ttu tracked" href="#0">Get in touch</a>
+
+    <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb4 ml3-ns dib white bg-ashdarkgrey ttu tracked" href="#0">0044 000 0000</a>
+  </section>
+
+
+    <img class="mw4-5 mb4 mt2-l ml1-l" src="{{ site.baseurl }}/images/LOGO-HORIZ-RGB-white.png" alt="Ashbright">
   </div>
 </footer>
