Added bio layout.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <img src="{{ site.baseurl }}/images/LOGO-HORIZ-RGB.png" class="dib" alt="Ashbright">
   </a>
 
-  <div class="db dtc-l v-btm w-100 w-75-l tc tr-l">
+  <div class="db dtc-l v-btm v-mid-l w-100 w-75-l tc tr-l">
     <a class="ash-sans link hover-ashblue dim no-underline ashblue f6 f5-l dib mr3 mr4-l ttu" href="{{ site.baseurl }}/" title="Home">Home</a>
     <a class="ash-sans hover-ashblue dim no-underline ashblue f6 f5-l dib mr3 mr4-l ttu"  href="{{ site.baseurl }}/#about" title="About">About</a>
     <a class="ash-sans hover-ashblue dim no-underline ashblue f6 f5-l dib mr3 mr4-l ttu"  href="{{ site.baseurl }}/#situations" title="Situations">Situations</a>
