--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,6 +8,6 @@
 
     <img class="mw4-5 mb4 mt2-l ml1-l" src="{{ site.baseurl }}/images/LOGO-RGB.png" alt="Ashbright">
 
-    <p class="f4 lh-copy ml4-l">ASHBRIGHT DWC-LLC, Business Center, Dubai World Central, PO Box 390667, Dubai, UAE</p>
+    <p class="f4 lh-copy mr5-l tr-l">ASHBRIGHT DWC-LLC, Business Center, Dubai World Central, PO Box 390667, Dubai, UAE</p>
   </div>
 </footer>
