Added optimised image.

--- a/_scss/_tachyons-extend.scss
+++ b/_scss/_tachyons-extend.scss
@@ -3,10 +3,8 @@ body {
   font-family: 'PT Serif', Georgia, Times, Times New Roman, serif;
 }
 
-h1,
-.h1,
-h2,
-.h2,
+h1,.h1,
+h2,.h2,
 h3,
 .h3,
 h4,
