Tweaks to templates and creating new collection for situations.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-ashblue pt2 mt4 pb5-l">
+<footer class="bg-ashblue pt2 mt4 pb2 pb5-l">
   <div class = "bt b--ashdarkgrey tc tl-l pt4-l">
   <section id="contact" class="mw6 mw7-ns center pt4 tc fr-l pr5-l">
     <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb4 mr3-ns dib white bg-black ttu tracked" href="mailto:ta@ashbright.com">Get in touch</a>
@@ -8,6 +8,6 @@
 
     <img class="mw4-5 mb4 mt2-l ml1-l" src="{{ site.baseurl }}/images/LOGO-RGB.png" alt="Ashbright">
 
-    <p class="f4 lh-copy mr5-l tr-l">ASHBRIGHT DWC-LLC, Business Center, Dubai World Central, PO Box 390667, Dubai, UAE</p>
+    <p class="f4 lh-copy pb4 pb0-l mr5-l tr-l">ASHBRIGHT DWC-LLC, PO Box 712472, Dubai, UAE</p>
   </div>
 </footer>
