--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,7 +35,7 @@
     function loadCSS(e,t,n){"use strict";function r(){for(var t,i=0;i<d.length;i++)d[i].href&&d[i].href.indexOf(e)>-1&&(t=!0);t?o.media=n||"all":setTimeout(r)}var o=window.document.createElement("link"),i=t||window.document.getElementsByTagName("script")[0],d=window.document.styleSheets;return o.rel="stylesheet",o.href=e,o.media="only x",i.parentNode.insertBefore(o,i),r(),o}
     // load a file
       loadCSS( "{{ site.baseurl }}/css/main.css");
-      loadCSS( "https://fonts.googleapis.com/css?family=Oswald:400,600|PT+Serif");
+      loadCSS( "https://fonts.googleapis.com/css?family=Oswald:400,600%7CPT+Serif");
     </script>
 
 
