Added Google Analytics code.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,3 +11,15 @@
     <p class="f4 lh-copy pb4 pb0-l mr5-l tr-l">ASHBRIGHT DWC-LLC, PO Box 712472, Dubai, UAE</p>
   </div>
 </footer>
+
+<!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-106864288-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments)};
+  gtag('js', new Date());
+
+  gtag('config', 'UA-106864288-1');
+</script>
+
+
