--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,4 +47,14 @@
       <link href="https://fonts.googleapis.com/css?family=Oswald:400,600|PT+Serif" rel="stylesheet">
     </noscript>
 
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106864288-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+
+      gtag('config', 'UA-106864288-1');
+    </script>
+
 </head>
