--- a/_includes/head.html
+++ b/_includes/head.html
@@ -57,4 +57,6 @@
       gtag('config', 'UA-106864288-1');
     </script>
 
+    <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html',''}}">
+
 </head>
