--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,23 +1,7 @@
 <head>
-  <title>
-    {% if page.title == "Home" %}
-      {{ site.title }} &#8211;
-      {{ site.tagline }}
-    {% else %}
-      {{ page.title }} &#8211;
-      {{ site.title }}
-    {% endif %}
-  </title>
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-
-  {% if page.excerpt %}
-    <meta name="description" content="{{ page.excerpt | strip_html | truncatewords: 20 }}" />
-  {% else %}
-    <meta name="description" content="{{ site.tagline }}" />
-  {% endif %}
 
   <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/favicon-32x32.png">
@@ -57,6 +41,6 @@
       gtag('config', 'UA-106864288-1');
     </script>
 
-    <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html',''}}">
+    {% seo %}
 
 </head>
