Make phone and email site variables.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <footer class="bg-ashblue pt2 mt4 pb2 pb5-l">
   <div class = "bt b--ashdarkgrey tc tl-l pt4-l">
   <div id="contact" class="mw6 mw7-ns center pt4 tc fr-l pr5-l">
-    <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb4 mr3-ns dib white bg-black ttu tracked" href="mailto:ta@ashbright.com">Get in touch</a>
+    <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb4 mr3-ns dib white bg-black ttu tracked" href="mailto:{{ site.email }}">Get in touch</a>
 
-    <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb4 ml3-ns dib white bg-ashdarkgrey ttu tracked" href="tel:+971502206916">+971 50 220 6916</a>
+    <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb4 ml3-ns dib white bg-ashdarkgrey ttu tracked" href="tel:{{ site.tel }}">{{ site.tel }}</a>
   </div>
 
     <img class="mw4-5 mb4 mt2-l ml1-l" src="{{ site.baseurl }}/images/LOGO-RGB.png" alt="Ashbright">
