--- a/_scss/_tachyons-extend.scss
+++ b/_scss/_tachyons-extend.scss
@@ -11,6 +11,7 @@ h4,
 .h4,
 .ash-sans {
     font-family: 'Oswald', Arial, 'Helvetica Neue', Helvetica, sans-serif;
+    font-weight: 700;
 }
 
 p {
