--- a/_layouts/situations.html
+++ b/_layouts/situations.html
@@ -7,7 +7,7 @@ layout: default
 <header>
   <div class="cover bg-left bg-center-l vh-75 dt w-100" style="background-image: url({{ site.baseurl }}/images/{{ page.image }}.jpg)">
     <div class="bg-black-40 dtc v-mid tc">
-        <h1 class="f-head f-head-ns fw2 white-90 mb0 lh-title ttu">{{ page.title }}</h1>
+        <h1 class="f-head f-head-ns white-90 mb0 lh-title ttu">{{ page.title }}</h1>
     </div>
   </div>
 </header>
