--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,11 +4,11 @@
     <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb4 mr3-ns dib white bg-black ttu tracked" href="mailto:{{ site.email }}">Get in touch</a>
 
     <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb4 ml3-ns dib white bg-ashdarkgrey ttu tracked" href="tel:{{ site.tel }}">{{ site.tel }}</a>
+
+    <p class="f4 lh-copy ttu pb4 pb0-l tr-l tracked ash-sans">ASHBRIGHT DWC-LLC, PO Box 712472, Dubai, UAE</p>
   </div>
 
-    <img class="mw4-5 mb4 mt2-l ml1-l" src="{{ site.baseurl }}/images/LOGO-RGB.png" alt="Ashbright">
-
-    <p class="f4 lh-copy pb4 pb0-l mr5-l tr-l">ASHBRIGHT DWC-LLC, PO Box 712472, Dubai, UAE</p>
+    <img class="mw4-5 mb4 mb0-l mt2-l ml1-l" src="{{ site.baseurl }}/images/LOGO-RGB.png" alt="Ashbright">
   </div>
 
   <a href="#" class="back-to-top fixed bottom-1 right-1" data-aos="fade-left"
