Finished the button.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<nav class="db dt-l w-100 border-box pa3 ph3-l">
+<nav class="db dt-l w-100 border-box pa3 ph3-l" id="top">
   <a class="db dtc-l v-mid mid-gray link dim w-100 w-25-l tc tl-l mb2 mb0-l" href="{{ site.baseurl }}/" title="Home">
     <img class="mw4-5 pl4-l" src="{{ site.baseurl }}/images/LOGO-HORIZ-RGB.png" alt="Ashbright">
   </a>
