--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
     <p class="f4 lh-copy ttu pb4 pb0-l tr-l tracked ash-sans">ASHBRIGHT DWC-LLC, PO Box 712472, Dubai, UAE</p>
   </div>
 
-    <img class="mw4-5 mb4 mb0-l mt2-l ml1-l" src="{{ site.baseurl }}/images/LOGO-RGB.png" alt="Ashbright">
+    <img class="mw4-5 mb4 mb0-l mt2-l ml1-l" src="{{ site.baseurl }}/images/LOGO-RGB.png" alt="Ashbright" data-aos="flip-up">
   </div>
 
   <a href="#" class="back-to-top fixed bottom-1 right-1" data-aos="fade-left"
