Change the scroll to top button so it only appears in the footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-ashblue pt2 pb2 pb5-l">
+<footer class="bg-ashblue pt2 pb2 pb5-l" id="fadein-backtotop">
   <div class = "bt b--ashdarkgrey tc tl-l pt4-l">
   <div id="contact" class="mw6 mw7-ns center pt4 tc fr-l pr5-l">
     <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb4 mr3-ns dib white bg-black ttu tracked" href="mailto:{{ site.email }}">Get in touch</a>
