--- a/_layouts/situations.html
+++ b/_layouts/situations.html
@@ -23,7 +23,7 @@ layout: default
     </div>
 
 
-  <div class="cf mw8 center ph3 pt3-l" id="fadein-backtotop">
+  <div class="cf mw8 center ph3 pt3-l">
     {% for situation in site.situations %}
      {% if situation.url != page.url %}
 
