--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,13 +7,12 @@
 
     <p class="f4 lh-copy ttu pb4 pb0-l ph2 ph0-ns tr-l tracked ash-sans">ASHBRIGHT DWC-LLC, PO Box 712472, Dubai, UAE</p>
   </div>
-
-    <img class="mw4-5 mb4 mb0-l mt2-l ml1-l" src="{{ site.baseurl }}/images/LOGO-RGB.png" alt="Ashbright" data-aos="flip-up">
+    <img class="mw4-5 mb4 mb0-l mt2-l ml1-l" src="{{ site.baseurl }}/images/LOGO-RGB.png" alt="Ashbright" >
   </div>
 
   <a href="#" class="back-to-top fixed bottom-1 right-1" data-aos="fade-left"
      data-aos-anchor="#fadein-backtotop">
-    <img src="{{ site.baseurl }}/images/arrow.svg" class="di w2 w3-l" alt="Scroll to top button"></i>
+    <img src="{{ site.baseurl }}/images/arrow.svg" class="di w2 w3-l" alt="Scroll to top button">
   </a>
 </footer>
 
