--- a/_layouts/situation.html
+++ b/_layouts/situation.html
@@ -17,11 +17,17 @@ layout: default
    </div>
 
     <div class="pv4 pl3 mw6 mw7-ns center tc-ns">
-      <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb4 mr3-ns dib white bg-ashblue ttu tracked" href="mailto:ta@ashbright.com">Get in touch</a>
-
-      <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb4 ml3-ns dib white bg-ashdarkgrey ttu tracked" href="tel:+971502206916">+971 50 220 6916</a>
+      <span itemscope itemtype="http://schema.org/Corporation">
+        <span class="dn" itemprop="name">{{ site.name }}</span>
+          <span itemprop="email">
+            <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb4 mr3-ns dib white bg-black ttu tracked" href="mailto:{{ site.email }}">{{ site.calltoaction }}</a>
+          </span>
+          <span itemprop="telephone">
+            <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb4 ml3-ns dib white bg-ashblue ttu tracked" href="tel:{{ site.tel }}">{{ site.tel }}</a>
+          </span>
+         </span>
+       </span>
     </div>
-
 
   <div class="cf mw8 center ph3 pt3-l">
     {% for situation in site.situations %}
