--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,29 +28,9 @@
 </footer>
 
 <script>
-// Smooth scroll
+// Smooth scroll - https://github.com/alicelieutier/smoothScroll
 
-"use strict";function scrollIt(e){function n(){var e="now"in window.performance?performance.now():(new Date).getTime(),c=Math.min(1,(e-a)/t),m=o[u](c);return window.scroll(0,Math.ceil(m*(d-i)+i)),window.pageYOffset===d?void(r&&r()):void requestAnimationFrame(n)}var t=arguments.length<=1||void 0===arguments[1]?200:arguments[1],u=arguments.length<=2||void 0===arguments[2]?"linear":arguments[2],r=arguments[3],o={linear:function(e){return e},easeInQuad:function(e){return e*e},easeOutQuad:function(e){return e*(2-e)},easeInOutQuad:function(e){return.5>e?2*e*e:-1+(4-2*e)*e},easeInCubic:function(e){return e*e*e},easeOutCubic:function(e){return--e*e*e+1},easeInOutCubic:function(e){return.5>e?4*e*e*e:(e-1)*(2*e-2)*(2*e-2)+1},easeInQuart:function(e){return e*e*e*e},easeOutQuart:function(e){return 1- --e*e*e*e},easeInOutQuart:function(e){return.5>e?8*e*e*e*e:1-8*--e*e*e*e},easeInQuint:function(e){return e*e*e*e*e},easeOutQuint:function(e){return 1+--e*e*e*e*e},easeInOutQuint:function(e){return.5>e?16*e*e*e*e*e:1+16*--e*e*e*e*e}},i=window.pageYOffset,a="now"in window.performance?performance.now():(new Date).getTime(),c=Math.max(document.body.scrollHeight,document.body.offsetHeight,document.documentElement.clientHeight,document.documentElement.scrollHeight,document.documentElement.offsetHeight),m=window.innerHeight||document.documentElement.clientHeight||document.getElementsByTagName("body")[0].clientHeight,s="number"==typeof e?e:e.offsetTop,d=Math.round(m>c-s?c-m:s);return"requestAnimationFrame"in window==!1?(window.scroll(0,d),void(r&&r())):void n()}
-
-// Scroll to about
-document.querySelector('.about').addEventListener('click', function () {
-  scrollIt(document.querySelector('#about'), 300, 'easeOutQuad');
-});
-
-// Scroll to situations
-document.querySelector('.situations').addEventListener('click', function () {
-  scrollIt(document.querySelector('#situations'), 300, 'easeOutQuad');
-});
-
-// Scroll to contact
-document.querySelector('.contact').addEventListener('click', function () {
-  scrollIt(document.querySelector('#contact'), 300, 'easeOutQuad');
-});
-
-// Scroll to top
-document.querySelector('.back-to-top').addEventListener('click', function () {
-  scrollIt(document.querySelector('#top'), 300, 'easeOutQuad');
-});
+(function(root,smoothScroll){"use strict";if(typeof define==="function"&&define.amd){define(smoothScroll)}else if(typeof exports==="object"&&typeof module==="object"){module.exports=smoothScroll()}else{root.smoothScroll=smoothScroll()}})(this,function(){"use strict";if(typeof window!=="object")return;if(document.querySelectorAll===void 0||window.pageYOffset===void 0||history.pushState===void 0){return}var getTop=function(element,start){if(element.nodeName==="HTML")return-start;return element.getBoundingClientRect().top+start};var easeInOutCubic=function(t){return t<.5?4*t*t*t:(t-1)*(2*t-2)*(2*t-2)+1};var position=function(start,end,elapsed,duration){if(elapsed>duration)return end;return start+(end-start)*easeInOutCubic(elapsed/duration)};var smoothScroll=function(el,duration,callback,context){duration=duration||500;context=context||window;var start=context.scrollTop||window.pageYOffset;if(typeof el==="number"){var end=parseInt(el)}else{var end=getTop(el,start)}var clock=Date.now();var requestAnimationFrame=window.requestAnimationFrame||window.mozRequestAnimationFrame||window.webkitRequestAnimationFrame||function(fn){window.setTimeout(fn,15)};var step=function(){var elapsed=Date.now()-clock;if(context!==window){context.scrollTop=position(start,end,elapsed,duration)}else{window.scroll(0,position(start,end,elapsed,duration))}if(elapsed>duration){if(typeof callback==="function"){callback(el)}}else{requestAnimationFrame(step)}};step()};var linkHandler=function(ev){if(!ev.defaultPrevented){ev.preventDefault();if(location.hash!==this.hash)window.history.pushState(null,null,this.hash);var node=document.getElementById(this.hash.substring(1));if(!node)return;smoothScroll(node,500,function(el){location.replace("#"+el.id)})}};document.addEventListener("DOMContentLoaded",function(){var internal=document.querySelectorAll('a[href^="#"]:not([href="#"])'),a;for(var i=internal.length;a=internal[--i];){a.addEventListener("click",linkHandler,false)}});return smoothScroll});
 
 // Animation scrolling
 
