--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
         <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb4 ml3-ns dib white bg-ashdarkgrey ttu tracked" href="tel:{{ site.tel }}">{{ site.tel }}</a>
       </span>
 
-      <p class="f4 lh-copy ttu pb4 pb0-l ph2 ph0-ns tr-l tracked ash-sans" itemscope itemtype="http://schema.org/PostalAddress">
+      <span class="f4 db lh-copy ttu pb4 pb0-l ph2 ph0-ns tr-l tracked ash-sans" itemscope itemtype="http://schema.org/PostalAddress">
          <span itemprop="name">{{ site.address.name }},</span>
          PO Box<span itemprop="postOfficeBoxNumber"> {{ site.address.postcode }},</span>
          <span itemprop="addressRegion"> {{ site.address.region }},</span>
