--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
          PO Box<span itemprop="postOfficeBoxNumber"> {{ site.address.postcode }},</span>
          <span itemprop="addressRegion"> {{ site.address.region }},</span>
          <span itemprop="addressCountry"> {{ site.address.country }}</span>
-      </p>
+      </span>
     </span>
   </div>
     <img class="mw4-5 mb4 mb0-l mt2-l ml1-l" src="{{ site.baseurl }}/images/LOGO-RGB.png" alt="Ashbright" >
