Turned bios into collection

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,9 +10,9 @@
       </span>
 
       <span class="f4 db lh-copy ttu pb4 pb0-l ph2 ph0-ns tr-l tracked ash-sans" itemscope itemtype="http://schema.org/PostalAddress">
-         <span itemprop="name">{{ site.address.name }},</span>
-         PO Box<span itemprop="postOfficeBoxNumber"> {{ site.address.postcode }},</span>
-         <span itemprop="addressRegion"> {{ site.address.region }},</span>
+         <span itemprop="name">{{ site.address.name }}</span>,
+         PO Box<span itemprop="postOfficeBoxNumber"> {{ site.address.postcode }}</span>,
+         <span itemprop="addressRegion"> {{ site.address.region }}</span>,
          <span itemprop="addressCountry"> {{ site.address.country }}</span>
       </span>
     </span>
