added netlify identity widget to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,6 +38,8 @@
   }
 </script>
 
+ <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
 <script>
 // Smooth scroll - https://github.com/alicelieutier/smoothScroll
 
