--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -1,4 +1,5 @@
 @import '_variables.scss';
+@import '_variables-brightx.scss';
 @import '_tachyons/_tachyons.scss';
 @import '_tachyons-extend.scss';
 @import '_tachyons-extend-brightx.scss';
