First draft of bright x

--- a/_includes/footer-brightx.html
+++ b/_includes/footer-brightx.html
@@ -1,6 +1,6 @@
 <footer class="bg-black pt2 pb2 pb5-l" id="fadein-backtotop">
-  <div class = "bt b--ashdarkgrey tc tl-l pt4-l">
-  <div id="contact" class="mw6 mw7-ns center pt4 tc fr-l pr5-l">
+  <div class = "bt b--brightxlightgrey tc tl-l pt4-l">
+  <div id="contact" class="mw6 mw7-ns center tc fr-l pr5-l">
     <span itemscope itemtype="http://schema.org/Corporation">
       <span class="dn" itemprop="name">{{ site.name }}</span>
         <a class="brightx-sans f5 f3-ns link dim ph3 ph4-l pv2 mb4 mr3-ns dib white bg-brightxred b ttu" href="mailto:{{ site.email }}">Get in touch</a>
