Wide screens version OK

--- a/_includes/footer-brightx.html
+++ b/_includes/footer-brightx.html
@@ -1,9 +1,9 @@
-<footer class="bg-black pt2 pb2 pb5-l vh-25" id="fadein-backtotop">
-  <div class = "bt b--brightxlightgrey tc tl-l pt4-l">
+<footer class="bg-black pt2 pb2 pb6-l" id="fadein-backtotop">
+  <div class = "bt b--brightxlightgrey tc tl-l pt5-l">
   <div id="contact" class="mw6 mw7-ns center tc fr-l pr5-l">
     <span itemscope itemtype="http://schema.org/Corporation">
-      <span class="dn" itemprop="name">{{ site.name }}</span>
-        <a class="brightx-sans f5 f3-ns link dim ph3 ph4-l pv2 mb4 mr3-ns dib white bg-brightxred b ttu" href="mailto:{{ site.email }}">Get in touch</a>
+      <span class="dn" itemprop="name">Bright X</span>
+        <a class="brightx-sans f5 f3-ns link ph3 ph4-l pv2 mb4 mr3-ns dib white btn cta bg b ttu" href="mailto:{{ site.email }}">Get in touch</a>
         <meta itemprop="email" content="{{ site.email }}">
   </div>
     <img class="mw4-5 mb4 mb0-l ml1-l pl4" src="{{ site.baseurl }}/images/BrightX-Logo-BW-Black-01-web.png" alt="BrightX" >
