Finish first draft Birght X home

--- a/_includes/footer-brightx.html
+++ b/_includes/footer-brightx.html
@@ -6,10 +6,10 @@
         <a class="brightx-sans f5 f3-ns link ph3 ph4-l pv2 mb4 mr3-ns dib white btn cta bg b ttu" href="mailto:{{ site.email }}">Get in touch</a>
         <meta itemprop="email" content="{{ site.email }}">
   </div>
-    <img class="mw4-5 mb4 mb0-l ml1-l pl4 pt5 pt0-l" src="{{ site.baseurl }}/images/BrightX-Logo-BW-Black-01-web.png" alt="BrightX" >
+    <img class="mw4-5 mb6 mb4-l mb0-l ml1-l pl4 pt5 pt0-l" src="{{ site.baseurl }}/images/BrightX-Logo-BW-Black-01-web.png" alt="BrightX" >
   </div>
 
-  <a href="#" class="back-to-top fixed bottom-1 right-1" data-aos="fade-left"
+  <a href="#" class="back-to-top fixed bottom-1 right-1 bg-white lh-solid" data-aos="fade-left"
      data-aos-anchor="#fadein-backtotop">
     <img src="{{ site.baseurl }}/images/arrow.svg" class="di w2 w3-l" alt="Scroll to top button">
   </a>
