--- a/_scss/_tachyons-extend-brightx.scss
+++ b/_scss/_tachyons-extend-brightx.scss
@@ -197,3 +197,49 @@
   background: #fff;
 }
 
+.dashed-bullet {
+  padding-left: 1.5rem;
+  text-indent: -0.5rem;
+}
+
+.dashed-bullet:before {
+    content: "— ";
+    margin-left: -1rem;
+    padding-right: 0.25rem;
+  }
+
+
+@media #{$breakpoint-not-small}  {
+
+  .dashed-bullet:before {
+      content: " ";
+      margin-left: 0;
+      padding-right: 0;
+  }
+
+  .dashed-bullet {
+     padding-left: 0;
+     text-indent: 0;
+  }
+
+}
+
+
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+}
+
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
