--- a/_includes/footer-brightx.html
+++ b/_includes/footer-brightx.html
@@ -6,7 +6,9 @@
         <a class="brightx-sans f5 f3-ns link ph3 ph4-l pv2 mb4 mr3-ns dib white btn cta bg b ttu" href="mailto:{{ site.email }}">Get in touch</a>
         <meta itemprop="email" content="{{ site.email }}">
   </div>
-    <img class="mw4-5 mb6 mb4-l mb0-l ml1-l pl4 pt5 pt0-l" src="{{ site.baseurl }}/images/BrightX-Logo-BW-Black-01-web.png" alt="BrightX" >
+  <a class="link dim" href="{{ site.baseurl }}/" title="Home">
+    <img class="mw4-5 mb6 mb4-l mb0-l pt5 pt0-l ml4-l" src="{{ site.baseurl }}/images/LOGO-HORIZ-RGBw.png" alt="Ashbright" >
+  </a>
   </div>
 
   <a href="#" class="back-to-top fixed bottom-1 right-1 bg-white lh-solid" data-aos="fade-left"
