--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,9 @@
     <img class="mw4-5 pl4-l" src="{{ site.baseurl }}/images/LOGO-HORIZ-RGB.png" alt="Ashbright">
   </a>
   <div class="db dtc-l v-mid v-bottom-l w-100 w-75-l tc tr-l">
-    <a class="ash-sans link hover-ashblue no-underline ashblue f6 f5-l dib mr3 mr4-l ttu" href="{{ site.baseurl }}/" title="Home">Home</a>
     <a class="ash-sans hover-ashblue no-underline ashblue f6 f5-l dib mr3 mr4-l ttu about" href="{{ site.baseurl }}/#about" title="About">About</a>
     <a class="ash-sans hover-ashblue no-underline ashblue f6 f5-l dib mr3 mr4-l ttu situations" href="{{ site.baseurl }}/#situations" title="Situations">Situations</a>
+    <a class="ash-sans hover-ashblue no-underline ashblue f6 f5-l dib mr3 mr4-l ttu situations" href="{{ site.baseurl }}/brightx" title="Bright X">Bright X</a>
     <a class="ash-sans hover-ashblue no-underline ashblue f6 f5-l dib mr3 mr4-l ttu contact" href="{{ site.baseurl }}/#contact" title="Contact">Contact</a>
   </div>
 </nav>
