Remove border from top of footer

--- a/_includes/footer-brightx.html
+++ b/_includes/footer-brightx.html
@@ -1,5 +1,5 @@
 <footer class="bg-black pt2 pb2 pb6-l" id="fadein-backtotop">
-  <div class = "bt b--brightxlightgrey tc tl-l pt5-l">
+  <div class = "tc tl-l pt5-l">
   <div id="contact" class="mw6 mw7-ns center tc fr-l pr5-l pt5 pt0-l">
     <span itemscope itemtype="http://schema.org/Corporation">
       <span class="dn" itemprop="name">Bright X</span>
