--- a/_includes/footer-brightx.html
+++ b/_includes/footer-brightx.html
@@ -5,6 +5,7 @@
       <span class="dn" itemprop="name">Bright X</span>
         <a class="brightx-sans f5 f3-ns link dim ph3 ph4-l pv2 mb4 mr3-ns dib white bg-black ttu tracked bg-brightxred" href="mailto:{{ site.email }}">Get in touch</a>
         <meta itemprop="email" content="{{ site.email }}">
+      </span>
   </div>
   <a class="link dim" href="{{ site.baseurl }}/" title="Home">
     <img class="mw4-5 mb6 mb4-l mb0-l pt5 pt0-l ml4-l" src="{{ site.baseurl }}/images/LOGO-HORIZ-RGBw.png" alt="Ashbright" >
@@ -13,7 +14,7 @@
 
   <a href="#" class="back-to-top fixed bottom-1 right-1 bg-white lh-solid" data-aos="fade-left"
      data-aos-anchor="#fadein-backtotop">
-    <img src="{{ site.baseurl }}/images/arrow.svg" class="di w2 w3-l" alt="Scroll to top button">
+    <img src="{{ site.baseurl }}/images/arrow.svg" class="di w2" alt="Scroll to top button">
   </a>
 </footer>
 
